--- a/card-api/index.html
+++ b/card-api/index.html
@@ -11,9 +11,9 @@
     
     <main id="main">
         <div class="select-character">
-            <select name="characters" id="change-characters" onchange="showCards(data);">
-                <option value="">Select a character</option>
-                <option value="" id="all-characters">All characters</option>
+            <select class="select" name="characters" id="change-characters">
+                <option select disabled value="all">Select a character</option>
+                <option value="all">All characters</option>
             </select>
         </div>
         <hr>
